--- a/reports/figures/tables/top_clusters.tex
+++ b/reports/figures/tables/top_clusters.tex
@@ -1,22 +1,22 @@
 \begin{tabular}{lr}
 \toprule
-Administrative area (country) &  Number of clusters \\
+    Administrative area (country) &  Number of clusters \\
 \midrule
-              California (US) &                   6 \\
-                New York (US) &                   3 \\
-              New Jersey (US) &                   3 \\
-            Pennsylvania (US) &                   2 \\
-                   Texas (US) &                   2 \\
-                 Ontario (CA) &                   2 \\
-                Virginia (US) &                   2 \\
-                Michigan (US) &                   2 \\
-                Maryland (US) &                   2 \\
-                Illinois (US) &                   2 \\
-                 Florida (US) &                   2 \\
-           Massachusetts (US) &                   2 \\
-              Washington (US) &                   2 \\
-                 Arizona (US) &                   1 \\
-              Gelderland (NL) &                   1 \\
-                  Taipei (TW) &                   1 \\
+                  California (US) &                   6 \\
+                  New Jersey (US) &                   3 \\
+                    New York (US) &                   3 \\
+               Massachusetts (US) &                   2 \\
+                Pennsylvania (US) &                   2 \\
+                  Washington (US) &                   2 \\
+                     Florida (US) &                   2 \\
+                    Maryland (US) &                   2 \\
+                     Ontario (CA) &                   2 \\
+                    Virginia (US) &                   2 \\
+                       Texas (US) &                   2 \\
+                    Illinois (US) &                   2 \\
+                    Michigan (US) &                   2 \\
+ London Borough of Islington (GB) &                   1 \\
+                Val-de-Marne (FR) &                   1 \\
+                     Jakarta (ID) &                   1 \\
 \bottomrule
 \end{tabular}
